# exconv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  presets.json  pyproject.toml
docs/: api.md  design.md  ideas.md  scripts.md
examples/: README.md  generate_examples.py  generate_test_assests.py
scripts/: animator.py  concat_videos.py  folderbatch.py  image2sound_demo.py  make_strategy_grid.py  sound2image_demo.py  sweep_conv2d_options.py  test_block_strategies.py  test_video.py  video_biconv.py  video_folderbatch.py
src/exconv/: __init__.py  __main__.py  video_meta.py
src/exconv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exconv/cli/: exconv_cli.py  folderbatch.py  image_demo.py  settings.py  video_biconv.py  video_folderbatch.py
src/exconv/conv1d/: __init__.py  audio.py
src/exconv/conv2d/: __init__.py  color.py  image.py  kernels.py
src/exconv/core/: __init__.py  fft.py  grids.py  norms.py
src/exconv/dsp/: __init__.py  crossfade.py  envelopes.py  normalize.py  segments.py  windows.py
src/exconv/io/: __init__.py  audio.py  image.py  io_video.py
src/exconv/mir/: __init__.py  blocks.py
src/exconv/xmodal/: __init__.py  image2sound.py  sound2image.py  video.py
tests/: conftest.py  test_cli_spectrogram.py  test_conv1d_audio.py  test_conv2d_image.py  test_core_fft.py  test_dsp_segments.py  test_examples_audio_audio.py  test_examples_img_img.py  test_examples_sound2image.py  test_folderbatch_audio.py  test_imports.py  test_io_audio.py  test_io_image.py  test_video_biconv_metadata.py  test_xmodal_sound2image.py  test_xmodal_sound2image_conversions.py  test_xmodal_sound2image_legacy.py
